<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:descendantFocusability="afterDescendants"
    android:focusable="true"
    app:cardBackgroundColor="@color/colorViolet"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:descendantFocusability="afterDescendants"
        android:focusable="true">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/licence_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="180dp"
            android:text="@string/licence_code"
            android:textColor="@color/colorWhite"
            android:textSize="48sp"
            app:layout_constraintBottom_toTopOf="@+id/licence"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/licence"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp24"
            android:background="@drawable/card_white"
            android:digits="0123456789"
            android:focusable="true"
            android:hint="@string/enter_licence"
            android:inputType="number"
            android:lines="1"
            android:maxLines="1"
            android:nextFocusDown="@+id/activate"
            android:padding="@dimen/dp16"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@color/colorGrayText"
            android:textColorHint="@color/colorGray"
            android:textSize="@dimen/sp32"
            app:layout_constraintBottom_toTopOf="@+id/activate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/licence_tips"
            app:layout_constraintWidth_percent="0.8" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/activate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp24"
            android:layout_marginBottom="@dimen/dp24"
            android:background="@drawable/ic_activate_btn"
            android:focusable="true"
            android:gravity="center"
            android:nextFocusUp="@id/licence"
            android:padding="@dimen/dp8"
            android:text="@string/activate"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp36"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/licence"
            app:layout_constraintWidth_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>